* Don't crash on New Contact * Rename New Contact to Create New Contact * Reindent the code as it was unreadable

BUG:99458

svn path=/trunk/kdeextragear-2/konversation/; revision=402428